# pangea

./: .gitignore  BACKLOG.md  CLAUDE.md  LICENSE  MULTIPLAYER.md  README.md  pyproject.toml
.claude/: settings.local.json
benchmarks/: bench_update.py
pangea/: __init__.py  __main__.py  api.py  brain.py  compute.py  config.py  creature.py  dna.py  evolution.py  menu.py  network.py  protocol.py  renderer.py  save_load.py  server.py  settings.py  settings_panel.py  simulation.py  species.py  tools.py  world.py
saves/: 0001_great-start.json
species/: species_20260314_153019.json  species_20260314_153835.json
species_settings/: carnivore.json  herbivore.json  new_species.json  omnivore.json  scavenger.json
tests/: test_biomes.py  test_brain.py  test_compute.py  test_creature.py  test_day_night.py  test_dna.py  test_dna_stash.py  test_evolution.py  test_food_decay.py  test_food_spawning.py  test_hazards.py  test_network.py  test_predators.py  test_protocol.py  test_save_load.py  test_server.py  test_species_stash.py
